# libfw

./: .travis.yml  CMakeLists.txt  README.md
include/flyingwhales/: core.hpp  maths.hpp  window.hpp
include/flyingwhales/core/: exception.hpp  noncopyable.hpp  platform.hpp  platform_sdk.hpp  stack_emplace.hpp
include/flyingwhales/maths/: matrix4.hpp  metric2.hpp  metric3.hpp  metric4.hpp  quaternion.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/flyingwhales/maths/impl/: matrix4_impl.hpp  metric2_impl.hpp  metric3_impl.hpp  metric4_impl.hpp  quaternion_impl.hpp  vector2_impl.hpp  vector3_impl.hpp  vector4_impl.hpp
include/flyingwhales/window/: window_interface.hpp  window_win.hpp
src/core/: exception.cpp
src/window/: window_win.cpp
